# fedstst_parser

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  setup.py
csv/: rel_urban_env_stat_D23.07.05T07.59.08.csv  urban_env_stat_D23.07.05T07.58.54.csv
scr/: config.py  cvs_generators.py  db_fillers.py  main.py  models.py  parsers.py
